--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/annahisenberg/Challenge-blog-API#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "mongoose": "^5.1.3",
     "morgan": "^1.9.0",
     "uuid": "^3.2.1"
   },
